--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </section>
 
         <footer class="clr">
-            <address>Copyright &copy; 2021 SAMIDARE&ochan. All Rights Reserved.</address>
+            <address>Copyright &copy; 2021 ziraiya&ochan. All Rights Reserved.</address>
         </footer>
     </div>
 </body>
